# DroneSearchAndRescue

./: .gitignore  LICENSE  README.md  main.py  object_detector.py  pyproject.toml  synthetic_aperture_image.py  utils.py  video_editor.py  video_editor_factory.py  video_processor.py  video_processor_factory.py  video_reader.py  video_reader_factory.py
drone_sar/: app.py  cli.py  image_processor.py  ipsar_dataset.py  lightning_detector.py  live.py  main.py  object_detector.py  ui.py  utils.py  video_processor.py  video_processor_factory.py  vis.py
notebooks/: eval.ipynb  train.ipynb  view-results.ipynb
