[tool.poetry]
name = "drone_sar"
version = "0.1.0"
description = ""
authors = ["AZ <otrqda@gmail.com>"]
readme = "README.md"
packages = [{ include = "drone_sar" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
opencv-python = "^4.7.0.72"
torch = "^1.13.1"
transformers = "^4.26.1"
pillow = "^9.4.0"
timm = "^0.6.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
